--- a/client/index.css
+++ b/client/index.css
@@ -159,7 +159,10 @@ table td.right {
 @media screen and (max-width: 600px) {
     table {
         border: 0;
-    }
+        width: 80%;
+        left: 10%
+
+}
 
     table caption {
         font-size: 1.3em;
